--- a/projeto-ritmo-melodia/src/css/Login.css
+++ b/projeto-ritmo-melodia/src/css/Login.css
@@ -1,93 +1,51 @@
-.container{
-    width: 450px;
-    background-color: rgba(255, 255, 255, 0.15);
-    backdrop-filter: blur(10px);
-    border: 2px sold rgba(255, 255, 255, 0.2);
-    padding: 40px;
-    border-radius: 10px;
-}
-
-.container h1{
+/* .container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  h1 {
     text-align: center;
-    font-size: 30px;
-    color: rgba(0,0,0,0.1);
-};
-
-.container .input-field{
+  }
+  
+  .input-field {
     position: relative;
+    margin-bottom: 20px;
+  }
+  
+  .input-field input {
     width: 100%;
-    height: 50px;
-    margin: 30px auto;
-}
-
-.input-field input{
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    outline: none;
-    border: 2px solid rgba(0,0,0,0.1);
-    border-radius: 40px;
-    font-size: 16px;
-    color: rgba(0,0,0,0.1);
-    padding: 20px 45px;
-}
-
-.input-field input::placeholder{
-    color:rgba(0,0,0,0.1);
-}
-
-.input-field .icon{
+    padding: 10px 40px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .input-field .icon {
     position: absolute;
-    right: 25px;
     top: 50%;
+    left: 10px;
     transform: translateY(-50%);
-    font-size: 10px;
-    color: #fff;
-}
-
-.container .recall-forget{
-    display: flex;
-    justify-content: space-between;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
-}
-
-.recall-forget label{
-    color:rgba(0,0,0,0.1);
-}
-
-.recall-forget input{
-    margin-right: 5px;
-}
-
-.recall-forget a,
-.signup-link p a{
-    color:rgba(0,0,0,0.1);
-    text-decoration: none;
-}
-
-.recall-forget a:hover,
-.signup-link p a:hover{
-    text-decoration: underline;
-}
-
-.container button{
+    color: #888;
+  }
+  
+  button {
     width: 100%;
-    height: 50px;
-    background-color:rgba(0,0,0,0.1);
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
     border: none;
-    outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    cursor: pointer ;
-    font-size: 16px;
-    font-weight: 600;
-    text-shadow: none;
-}
-
-.container .signup-link{
-    font-size: 15px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #0056b3;
+  }
+  
+  .recall-forget, .signup-link {
     text-align: center;
-    margin: 20px 0 10px;
-    text-shadow: none;
-}
+  }
+   */
