--- a/projeto-ritmo-melodia/src/App.css
+++ b/projeto-ritmo-melodia/src/App.css
@@ -21,7 +21,7 @@ body{
   height: 50px;
   margin: 20px;
   border: none;
-  background-color:rgb(37, 117, 253);
+  background-color: #006BFF;
   font-family: Garet;
   font-size: larger;
   border-radius: 50px; /* Borda arredondada */
@@ -42,7 +42,7 @@ nav{
 
 .faixaInicial{
   /* background-color:rgb(255, 234, 4); */
-  background-color: rgb(220, 184, 5);
+  background-color: #F3C623;
   border-radius: 50px;
   margin: 20px;
   height: 120px;
