--- a/projeto-ritmo-melodia/src/App.css
+++ b/projeto-ritmo-melodia/src/App.css
@@ -26,14 +26,14 @@ body{
   font-size: larger;
   border-radius: 50px; /* Borda arredondada */
   cursor: pointer; /* Mão ao passar o mouse*/ 
+  color: white;
 }
 
 .flex-item-home{
-  font-family: Garet;
   font-size: larger;
   cursor: pointer; /* Mão ao passar o mouse*/
   margin: 10px;
-  padding: 0%;;
+  padding: 0%;
 }
 
 nav{
