Testando Visuais Pra Playlist

--- a/projeto-ritmo-melodia/src/css/Cadastro.css
+++ b/projeto-ritmo-melodia/src/css/Cadastro.css
@@ -3,7 +3,7 @@
 }
 
 .painelCadastro{
-    background-color:rgb(220, 184, 5);
+    background-color: #F3C623;
     border-radius: 5cm;
     text-align: center;
 }
