--- a/projeto-ritmo-melodia/src/css/DesignPlaylist.css
+++ b/projeto-ritmo-melodia/src/css/DesignPlaylist.css
@@ -1,57 +1,158 @@
-.total{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
+:root{
+    --mainColor: #fff;
+    --mainLightColor: rgba(235,235,235,0.5);
+    --mainDimColor: rgb(228,228,228);
+}
+
+.container{
     display: flex;
     justify-content: center;
     align-items: center;
+    color: var(--mainColor);
+    font-family: 'Poppins';
+    box-sizing: border-box;
 }
 
-.musica-1 {
-    margin: 30px;
-    padding: auto;
+.backgroundVideo{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+    object-fit: cover;
+    height: 100vh;
+    z-index: -1;
+    filter: saturate(2.5);
+}
+
+.backgroundVideo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+.blackScreen{
+    position: absolute;
+    pointer-events: none;
+    background-color: rgba(17,17,17,0.2);
+}
+
+.music-Container{
+    width: 350px;
+    padding: 12px 3px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    color: #ddd;  
-}
-
-img {
-    width: 300px;
-    height: 300px;
-}
-
-.descricao-forro{
-    width: 300px;
-}
-
-h2{
-    margin-bottom: 5px;
-}
-
-.duracao-musica{
-    width: 300px;
-    margin-top: 25px;
-}
-
-.barra {
-    width: 300px;
-    height: 6px;
-    border: 1px solid #eee;
-    border-radius: 5px;
-    display: flex;
     align-items: center;
-    justify-content: flex-start;
+    text-align: center;
+    border-radius: 36px;
+    box-shadow: 0 0 20px rgba(26,26,26,0.1),
+    0 0 40px rgba(26,26,26,0.1),
+    0 0 80px rgba(26,26,26,0.1);
+    backdrop-filter: blur(15px);
+    font-weight: 600;
+    background-color: rgb(46, 125, 53);
 }
 
-progress{
-    height: 6px;
-    width: 50%;
-    background-color: #333;
+.musicPlayer{
+    margin: 0;
+    margin-bottom: 10px;
+    color: var(--mainLightColor);
 }
 
-.ponto{
-    width: 20px;
-    height: 20px;
-    background-color: #eee;
+.music-Head-Name{
+    margin: 0 auto;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.music-Artist-Name{
+    color: var(--mainDimColor);
+    margin: 4px 0;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+#songAvatar{
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
-    margin-left: -2px;
+    margin: 18px 0;
+    position: relative;
+    cursor: pointer;
+    animation: animateAvatar .5s linear infinite;
+}
+
+@keyframes animateAvatar {
+    0%,100%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.03);
+    }
+}
+
+.musicTimerDiv{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    font-weight: 600;
+}
+
+.musicProgressBar{
+    width: 100%;
+    margin-bottom: 16px;
+    height: 10px;
+    border-radius: 5px;
+    outline: none;
+    filter: hue-rotate(20deg);
+}
+
+.playBtn{
+    font-size: 32px;
+    margin: 8px 10px;
+    color: var(--mainColor);
+    cursor: pointer;
+    font-weight: 400;
+}
+
+.musicControler{
+    cursor: pointer;
+    font-size: 28px;
+    color: var(--mainColor);
+}
+
+.changeBackBtn{
+    width: 200px;
+    height: 15px;
+    background-color: #eee;
+    position: absolute;
+    border-radius: 12px 12px 0 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+    transition: .3s;
+    color: #eee;
+    cursor: pointer;
+    padding: 3px 0 0 0;
+    font-weight: 600;
+    text-align: center;
+}
+
+.changeBackBtn:hover{
+    height: 30px;
+    color: #222;
+}
+
+.objectFitCover{
+    object-fit: cover;
+}
+
+.objectFitContain{
+    object-fit: contain;
 }
