Artistas e músicas completas nas playlist

--- a/projeto-ritmo-melodia/src/App.css
+++ b/projeto-ritmo-melodia/src/App.css
@@ -11,7 +11,7 @@ body{
 
 /* .flex-conteiner{
   text-align: center;
-  display: flex;
+  display: flex;z
   flex-direction: row;
   flex-wrap: wrap;
 } */
