--- a/projeto-ritmo-melodia/src/css/Cadastro.css
+++ b/projeto-ritmo-melodia/src/css/Cadastro.css
@@ -1,9 +1,68 @@
-.tituloCadastro{
-    text-align: center;
+.body-cadastro{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center; /* Centraliza horizontalmente */
+    align-items: center;     /* Centraliza verticalmente */
+    flex-direction: column;
+    height: 100vh;           /* Ocupa toda a altura da tela */
 }
+  
+  .tituloCadastro {
+    color: #000000;
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+  }
+  
+  .painelCadastro {
+    width: 100%;
+    max-width: 400px;
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center; 
+    flex-direction: column;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  
+  .painelCadastro p {
+    width: 100%;
+    margin: 10px 0;
+    text-align: center;
+  }
+  
+.input-cadastro{
+    width: 100%;
+    padding: 12px;
+    border: 2px solid #ddd;
+    border-radius: 4px;
+    font-size: 1rem;
+    margin: 5px 0;
+    box-sizing: border-box;
+    transition: border-color 0.3s ease;
+  }
 
-.painelCadastro{
-    background-color: #F3C623;
-    border-radius: 5cm;
+  
+.button-cadastro {
+    width: 100%;
+    padding: 12px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .error {
+    color: red;
     text-align: center;
-}
+    font-size: 1rem;
+    margin-bottom: 20px;
+  }
+  
