--- a/projeto-ritmo-melodia/src/css/Login.css
+++ b/projeto-ritmo-melodia/src/css/Login.css
@@ -1,51 +1,109 @@
-/* .container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  .input-field {
-    position: relative;
-    margin-bottom: 20px;
-  }
-  
-  .input-field input {
-    width: 100%;
-    padding: 10px 40px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .input-field .icon {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%);
-    color: #888;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  .recall-forget, .signup-link {
-    text-align: center;
-  }
-   */
+body-login {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center; 
+  align-items: center;    
+  flex-direction: column;
+  height: 100vh;           
+}
+
+.container-login {
+  width: 100%;
+  max-width: 400px;
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center; 
+  flex-direction: column;
+  max-width: 400px;
+  margin: 0 auto;
+} 
+
+.titulo-login {
+  color: #000000;
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+.input-field-login {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+input {
+  width: 100%;
+  padding: 12px;
+  border: 2px solid #ddd;
+  border-radius: 4px;
+  font-size: 1rem;
+  margin: 5px 0;
+  box-sizing: border-box;
+  transition: border-color 0.3s ease;
+}
+
+input:focus {
+  border-color:  #007bff;
+  outline: none;
+}
+
+.icon-login {
+  position: absolute;
+  top: 50%;
+  left: 350px;
+  transform: translateY(-50%);
+  font-size: 1.2rem;
+  color: black;
+}
+
+.recall-forget-login {
+  text-align: right;
+  margin-top: -10px;
+}
+
+.recall-forget-login a {
+  color:  #007bff;
+  text-decoration: none;
+  font-size: 0.9rem;
+}
+
+.recall-forget-login a:hover {
+  text-decoration: underline;
+}
+
+.button-login {
+  width: 100%;
+  padding: 12px;
+  background-color:  #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.button-login:hover {
+  background-color: #034286;
+}
+
+.signup-link-login {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.signup-link-login p {
+  margin: 5px 0;
+  font-size: 1rem;
+}
+
+.signup-link-login .button-login {
+  background-color:  #007bff;
+  font-size: 1rem;
+}
+
+.signup-link-login .button-login:hover {
+  background-color:  #034286;
+}
